# typeChecking-haskell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  typeChecking.cabal
app/: Main.hs
src/Language/: Parser.hs  TypeCheck.hs  Types.hs
