cabal-version:      3.0
name:               typeChecking
version:            0.1.0.0
synopsis:           A bidirectional type checker for simple lambda calculus
license:            BSD-3-Clause
license-file:       LICENSE
author:             Leonardo Dias Pertuzzatti
maintainer:         leonardod16p@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

-- A Lógica principal fica aqui (Library)
library
    import:           warnings
    exposed-modules:  Language.Types
                    , Language.Parser
                    , Language.TypeCheck
    -- Outras extensões se necessário
    build-depends:    base ^>=4.18.3.0
                    , containers
                    , megaparsec
                    , parser-combinators
    hs-source-dirs:   src
    default-language: Haskell2010

-- O executável apenas importa a library e roda
executable typeChecking
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
                    , typeChecking
                    , containers
                    , megaparsec
    hs-source-dirs:   app
    default-language: Haskell2010